# swadm/src/route.rs
@@ -12,7 +12,7 @@ use anyhow::bail;
 use anyhow::Context;
 use colored::*;
 use futures::stream::TryStreamExt;
-use oxnet::IpNet;
+use oxnet::{IpNet, Ipv4Net, Ipv6Net};
 use structopt::*;
 use tabwriter::TabWriter;
 
@@ -83,57 +83,44 @@ fn print_route_header(
     .map_err(|e| e.into())
 }
 
-fn print_route(
+fn print_ipv4_route(
     tw: &mut TabWriter<std::io::Stdout>,
-    entry: types::Route,
+    cidr: Ipv4Net,
+    targets: &Vec<types::Ipv4Route>,
 ) -> anyhow::Result<()> {
-    let mut cidr = entry.cidr.to_string();
-    for t in entry.targets {
-        let (port, link, ip, vlan) = match t {
-            types::RouteTarget::V4(tgt) => (
-                tgt.port_id.to_string(),
-                tgt.link_id.to_string(),
-                IpAddr::V4(tgt.tgt_ip),
-                tgt.vlan_id,
-            ),
-            types::RouteTarget::V6(tgt) => (
-                tgt.port_id.to_string(),
-                tgt.link_id.to_string(),
-                IpAddr::V6(tgt.tgt_ip),
-                tgt.vlan_id,
-            ),
-        };
-
-        let vlan = match vlan {
-            None => String::new(),
-            Some(id) => id.to_string(),
-        };
-
-        writeln!(tw, "{cidr}\t{port}\t{link:<}\t{ip}\t{vlan}")?;
+    let mut cidr = cidr.to_string();
+    for t in targets {
+        writeln!(
+            tw,
+            "{}\t{}\t{:<}\t{}\t{}",
+            cidr,
+            t.port_id,
+            t.link_id,
+            t.tgt_ip,
+            t.vlan_id.map_or(String::new(), |id| id.to_string()),
+        )?;
         cidr = String::new();
     }
     Ok(())
 }
 
-async fn route_list_family(
+fn print_ipv6_route(
     tw: &mut TabWriter<std::io::Stdout>,
-    client: &Client,
-    family: IpFamily,
+    cidr: Ipv6Net,
+    targets: &Vec<types::Ipv6Route>,
 ) -> anyhow::Result<()> {
-    let routes: Vec<types::Route> = match family {
-        IpFamily::V4 => client
-            .route_ipv4_list_stream(None)
-            .try_collect()
-            .await
-            .context("failed to get IPv4 routes")?,
-        IpFamily::V6 => client
-            .route_ipv6_list_stream(None)
-            .try_collect()
-            .await
-            .context("failed to get IPv6 routes")?,
-    };
-    for entry in routes {
-        print_route(tw, entry)?;
+    let mut cidr = cidr.to_string();
+    for t in targets {
+        writeln!(
+            tw,
+            "{}\t{}\t{:<}\t{}\t{}",
+            cidr,
+            t.port_id,
+            t.link_id,
+            t.tgt_ip,
+            t.vlan_id.map_or(String::new(), |id| id.to_string()),
+        )?;
+        cidr = String::new();
     }
     Ok(())
 }
@@ -153,38 +140,49 @@ async fn route_list(
     let mut tw = TabWriter::new(stdout());
     print_route_header(&mut tw)?;
     if v4 {
-        route_list_family(&mut tw, client, IpFamily::V4).await?;
+        let routes: Vec<types::Ipv4Routes> = client
+            .route_ipv4_list_stream(None)
+            .try_collect()
+            .await
+            .context("failed to get IPv4 routes")?;
+        for r in routes {
+            print_ipv4_route(&mut tw, r.cidr, &r.targets)?;
+        }
     }
     if v6 {
-        route_list_family(&mut tw, client, IpFamily::V6).await?;
+        let routes: Vec<types::Ipv6Routes> = client
+            .route_ipv6_list_stream(None)
+            .try_collect()
+            .await
+            .context("failed to get IPv6 routes")?;
+        for r in routes {
+            print_ipv6_route(&mut tw, r.cidr, &r.targets)?;
+        }
     }
     tw.flush().map_err(|e| e.into())
 }
 
 async fn route_get(client: &Client, cidr: IpNet) -> anyhow::Result<()> {
-    let targets = match &cidr {
-        IpNet::V4(c) => client
-            .route_ipv4_get(c)
-            .await
-            .context("failed to get IPv4 route")?
-            .into_inner()
-            .iter()
-            .map(|r| types::RouteTarget::V4(r.clone()))
-            .collect(),
-        IpNet::V6(c) => client
-            .route_ipv6_get(c)
-            .await
-            .context("failed to get IPv6 route")?
-            .into_inner()
-            .iter()
-            .map(|r| types::RouteTarget::V6(r.clone()))
-            .collect(),
-    };
-
-    let route = types::Route { cidr, targets };
     let mut tw = TabWriter::new(stdout());
     print_route_header(&mut tw)?;
-    print_route(&mut tw, route)?;
+    match &cidr {
+        IpNet::V4(c) => {
+            let targets = client
+                .route_ipv4_get(c)
+                .await
+                .context("failed to get IPv4 route")?
+                .into_inner();
+            print_ipv4_route(&mut tw, *c, &targets)?;
+        }
+        IpNet::V6(c) => {
+            let targets = client
+                .route_ipv6_get(c)
+                .await
+                .context("failed to get IPv6 route")?
+                .into_inner();
+            print_ipv6_route(&mut tw, *c, &targets)?;
+        }
+    }
     tw.flush().map_err(|e| e.into())
 }
 
